--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,13 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "types": ["tamagui"]
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "tamagui.config.js"  ]
+, "tamagui.config.ts"  ]
 }
