--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "immer": "^10.1.1",
+    "nanoid": "^5.1.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
