--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@tamagui/font-inter": "^1.125.19",
-    "@tamagui/lucide-icons": "^1.125.19",
-    "@tamagui/shorthands": "^1.125.19",
-    "@tamagui/themes": "^1.125.19",
+    "@tamagui/animations-react-native": "^1.125.20",
+    "@tamagui/core": "^1.125.20",
+    "@tamagui/font-inter": "^1.125.20",
+    "@tamagui/lucide-icons": "^1.125.20",
+    "@tamagui/shorthands": "^1.125.20",
+    "@tamagui/themes": "^1.125.20",
+    "@tamagui/toast": "^1.125.20",
+    "burnt": "^0.12.2",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
@@ -46,7 +50,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tamagui": "^1.125.19",
+    "tamagui": "^1.125.20",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
